<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_image_default_value"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="poster_size"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <ListPreference
        android:defaultValue="@string/pref_youtube_thumbnail_default_value"
        android:entries="@array/pref_youtube_thumbnail"
        android:entryValues="@array/pref_youtube_thumbnail_values"
        android:key="youtube_thumbnail"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_youtube_thumbnail" />


</PreferenceScreen>
